--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,1 @@
----
-import Layout from "../layouts/Layout.astro";
----
-
-<Layout title="Welcome to Astro.">
-  <main>aaa</main>
-</Layout>
-
-<style></style>
+<meta http-equiv="refresh" content="0;url=/es" />
