--- a/src/pages/[lang]/works.astro
+++ b/src/pages/[lang]/works.astro
@@ -14,7 +14,7 @@ export async function getStaticPaths() {
 }
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title={`rrios | Software Developer | ${t("works", "title")}`}>
   <Section title={`${t("works", "title")} 👨🏻‍💻`}>
     <ul>
       <li><p>{t("works", "introduction")}</p></li>
