--- a/src/components/section.astro
+++ b/src/components/section.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem;
+    padding: 0 1rem;
     max-width: 1024px;
 
     @media (min-width: 992px) {
