--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -12,7 +12,7 @@ export async function getStaticPaths() {
 }
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title={`rrios | Software Developer | ${t("home", "title")}`}>
   <Section title={`${t("home", "title")} 🤟`}>
     <SectionList
       items={[
