feat: first final version

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,6 +50,7 @@ const lng = getLangFromUrl(Astro.url);
       :root {
         --bg: #ffffff;
         --bg-opacity: rgba(255, 255, 255, 0.7);
+        --error: #ff0000;
         --text: #000000;
         --font-size: 16px;
         --font-family: "Ubuntu", sans-serif;
@@ -95,6 +96,7 @@ const lng = getLangFromUrl(Astro.url);
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0 1rem;
 
         & ul li {
           animation-name: scroll-animation;
@@ -104,6 +106,12 @@ const lng = getLangFromUrl(Astro.url);
           animation-timeline: view();
           animation-range: entry 85% cover 10%;
           animation-fill-mode: both;
+        }
+      }
+
+      @media (min-width: 1240px) {
+        main {
+          padding: 1rem 0;
         }
       }
 
