fix: remove alias

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,6 +1,6 @@
 ---
-import Circle from "@/components/circle.astro";
-import { getURLWithLang } from "@/i18n/utils";
+import Circle from "../components/circle.astro";
+import { getURLWithLang } from "../i18n/utils";
 
 const links = ["works", "trajectory", "contact"].map((link) => {
   return {
