--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,10 @@
 ---
-import Footer from "@/components/footer.astro";
-import Header from "@/components/header.astro";
-import useTranslation from "@/i18n/use-translation";
 import "@fontsource/ubuntu";
 import { ViewTransitions } from "astro:transitions";
 import "normalize.css";
+import Footer from "../components/footer.astro";
+import Header from "../components/header.astro";
+import useTranslation from "../i18n/use-translation";
 import { getLangFromUrl } from "../i18n/utils";
 
 interface Props {
