--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -1,6 +1,6 @@
 ---
-import ContactForm from "@/components/contact-form";
-import { LOCALE_STATIC_PATHS } from "@/i18n/constants";
+import ContactForm from "../../components/contact-form";
+import { LOCALE_STATIC_PATHS } from "../../i18n/constants";
 import useTranslation from "../../i18n/use-translation";
 import Layout from "../../layouts/Layout.astro";
 
