--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -78,11 +78,11 @@ const lng = getLangFromUrl(Astro.url);
       @keyframes scroll-animation {
         from {
           opacity: 0;
-          transform: translate(0, 10px) scale(0.9);
+          transform: translate(0, 10px);
         }
         to {
           opacity: 1;
-          transform: translate(0, 0) scale(1);
+          transform: translate(0, 0);
         }
       }
       body {
@@ -104,7 +104,7 @@ const lng = getLangFromUrl(Astro.url);
           view-timeline-name: view();
           view-timeline-axis: block;
           animation-timeline: view();
-          animation-range: entry 85% cover 10%;
+          animation-range: entry 85% cover 15%;
           animation-fill-mode: both;
         }
       }
